[gd_scene load_steps=4 format=3 uid="uid://sl5fnhvlhh5p"]

[ext_resource type="Script" uid="uid://cu7kkowqec1ge" path="res://scripts/playerHUD.gd" id="1_p4bhw"]
[ext_resource type="Texture2D" uid="uid://cpotfrgrvhep1" path="res://assets/menu/boostContainer.png" id="2_iewuw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iewuw"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.7137255, 0.4627451, 0.14117648, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[node name="playerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4bhw")

[node name="timerContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_bottom = 45.0
grow_horizontal = 0

[node name="Label" type="Label" parent="timerContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "00 : 000"

[node name="boostNode" type="Node2D" parent="."]
position = Vector2(26, 234)

[node name="boostBar" type="ProgressBar" parent="boostNode"]
offset_left = 2.0
offset_top = 2.0000153
offset_right = 72.0
offset_bottom = 237.00002
theme_override_styles/fill = SubResource("StyleBoxFlat_iewuw")
fill_mode = 3
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="boostNode"]
position = Vector2(-16, -17.00003)
scale = Vector2(1.8166665, 1.8933332)
texture = ExtResource("2_iewuw")
centered = false
